# gradebook-takehome

./: README.md  main.py  pyproject.toml
api/routers/: auth.py
api/schemas/: login.py
api/utils/: authentication.py  get_current_period.py
db/: initialize_db_data.py  session.py
db/models/: __init__.py  course.py  enrollment.py  period.py  score.py  student.py
